# publications

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
publications/: examples.py  main.py  pipeline.py
publications/utils/: config.py  deduplication.py  graph_builder.py  graph_helper.py  loader.py  validation.py
sql/: daily_sales.sql  sales_by_client.sql
tests/utils/: test_deduplication.py
