[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "publications"
version = "0.1.0"
description = "Graph builder pipeline for medical publication"
authors = ["Julie Berlin <berlin0712@gmail.com>"]
license = "proprietary"
readme = "README.md"
packages = [{include = "publications"}]

[tool.poetry.dependencies]
# waiting on pytype: https://github.com/google/pytype/issues/1308
python = ">=3.10"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pre-commit = "^2.14.0"
flake8 = "7.0.0"
pytest = "^8.0.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytype]
inputs = ['publications', 'tests']
pythonpath = "publications:"
# must match exactly the .python-version file
python_version = '3.10'

[tool.coverage.run]
relative_files = true
branch = true
